Bug 362241 - Rectangular Region option does not preview and does not save an image after 15.12.3-2 -> 16.04.0-1
Summary: Rectangular Region option does not preview and does not save an image after 1...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
: 362269 362705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-04-25 13:42 UTC by Ron Willhoite
Modified: 2016-10-08 15:27 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.1
Sentry Crash Report:


Attachments
Tiny Rectangle Selection (5.78 KB, image/png)
2016-07-29 21:05 UTC, Boudhayan Gupta
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ron Willhoite 2016-04-25 13:42:29 UTC
After upgrading from 15.12.3-2 -> 16.04.0-1, the Rectangular Region option lets you select an area of the screen, but does not preview the image, and the saved image is blank.

Other options like Active Window, Current Screen, etc. work as expected.

https://bugs.kde.org/show_bug.cgi?id=359368 is marked as Resolved Upstream for the Nvidia driver.

I use the nouveau driver, and wasn't sure if whatever Nvidia has done will help with nouveau.

I tried downgrading to 15.12.3, but Spectacle would not work at all. I assume I would need to downgrade other, related packages.
Comment 1 Boudhayan Gupta 2016-04-25 18:28:51 UTC
Git commit abbbe6d13de870f9e9349acc2542cffc5d41b76d by Boudhayan Gupta.
Committed on 25/04/2016 at 18:28.
Pushed by bgupta into branch 'Applications/16.04'.

Unbreak rectangular image grabs for nvidia users.
FIXED-IN: 16.04.1

M  +1    -18   src/QuickEditor/QuickEditor.cpp
M  +0    -1    src/QuickEditor/QuickEditor.h

http://commits.kde.org/kscreengenie/abbbe6d13de870f9e9349acc2542cffc5d41b76d
Comment 2 Boudhayan Gupta 2016-04-25 20:29:01 UTC
Git commit 2f5e7b8257663d59d12c0413f79ebfaaa918437a by Boudhayan Gupta.
Committed on 25/04/2016 at 20:28.
Pushed by bgupta into branch 'master'.

Unbreak rectangular image grabs for nvidia users.
FIXED-IN: 16.04.1

M  +1    -18   src/QuickEditor/QuickEditor.cpp
M  +0    -1    src/QuickEditor/QuickEditor.h

http://commits.kde.org/kscreengenie/2f5e7b8257663d59d12c0413f79ebfaaa918437a
Comment 3 Boudhayan Gupta 2016-04-25 21:57:00 UTC
*** Bug 362269 has been marked as a duplicate of this bug. ***
Comment 4 Boudhayan Gupta 2016-05-05 13:45:52 UTC
*** Bug 362705 has been marked as a duplicate of this bug. ***
Comment 5 linuxboy 2016-05-17 16:13:41 UTC
I read that this bug was fixed in 16.04.1.
Something goes wrong, because I have 16.04.1, but the problem persists.
Comment 6 Ron Willhoite 2016-05-17 17:03:22 UTC
Has been working for me, on Arch Linux. I haven't tried other distros.

Name            : spectacle
Version         : 16.04.1-1
Description     : KDE screenshot capture utility
Architecture    : x86_64
Build Date      : Fri 06 May 2016 08:31:23 PM EDT
Install Date    : Tue 10 May 2016 05:14:31 PM EDT
Comment 7 linuxboy 2016-05-17 19:55:57 UTC
Never mind, it's a mistake of mine. Spectacle 16.04.1 works correctly with rectangular region. Sorry.
Comment 8 ralph 2016-05-18 16:58:33 UTC
OpenSUSE Leap 42.1, Plasma 5.6.4, KDE Frameworks 5.22.0, Applications 16.04.1.
No way! Spectacle 16.04.1 is not able to take a snapshot of a small rectangular region; it works only if the region is big.

(nVidia proprietary driver).
Comment 9 Stuart K. Smith 2016-07-29 17:08:39 UTC
Rectanglar Region capture does not work below about 400x300 ish

Version 16.04.3 on KDEneon

Why is this marked "Resolved?"
Comment 10 Boudhayan Gupta 2016-07-29 21:05:42 UTC
Created attachment 100380 [details]
Tiny Rectangle Selection

This is a tiny rectangular selection.

Check with your GPU drivers. Nvidia is a known troublemaker.
Comment 11 ralph 2016-07-29 21:34:54 UTC
 Boudhayan Gupta, nothing is resolved or fixed; Spectacle does not work!
It is not able to take a snapshot of a small rectangular region; it does not remember previous geometry. During the snapshot, the screen becomes too dark and the cursor becomes invisible.
I don't understand why all these bugs are marked as RESOLVED, FIXED.
And I don't understand why Spectacle needs to deal directly with the GPU drivers; an application must be driver-independent.

It is ridiculous that in Plasma 5, KSnapShot is considered obsolete; it works perfectly and Spectacle does not work at all.
Comment 12 Boudhayan Gupta 2016-07-29 21:41:27 UTC
All of them are fixed.

1) Previous geometry can be remember as of KDE Applications 16.04
2) You can switch the mask colour to a light background as of KDE Applications 16.04
3) If you're using nVidia drivers, you may have problems with the smaller rectangular selection sizes. This is not Spectacle's fault but Qt5's - KSnapshot works here because it's still based on Qt4. Presumably one of Qt or nVidia will fix their problems at some point in time.

Please ensure you're running an up-to-date version of the software before reporting bugs.
Comment 13 ralph 2016-07-29 21:53:59 UTC
KDE Plasma 5.7.1
KDE Frameworks 5.24.0
KDE Applications 16.04.3
Qt 5.6.1
Comment 14 Boudhayan Gupta 2016-07-30 07:47:27 UTC
Have you tried clicking the arrow next to the Save and Exit button and then clicking Preferences?
Comment 15 Stuart K. Smith 2016-07-30 13:41:00 UTC
Yeah using nvidia driver here, thanks for the reply Boudhayan. I've had numerous issues with nvidia drivers higher than 340 with the newer 4.4 kernels. I don't have time to validate this right now, but I'll try reverting back to 340 and see if the issue continues. 

IMO, the latest nvidia drivers are crappy/buggy
Comment 16 Peter Wu 2016-10-08 15:27:43 UTC
(In reply to Stuart K. Smith from comment #9)
> Rectanglar Region capture does not work below about 400x300 ish
> 
> Version 16.04.3 on KDEneon

Please note that bug 362450 tracks the issue of a blank preview for small selections.