Unbreak rectangular image grabs for nvidia users.

BUG: 362241
FIXED-IN: 16.04.1